syntax = "proto3";

package d2bot;

option csharp_namespace = "D2BotNG.Core.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "profiles.proto";
import "keys.proto";
import "schedules.proto";
import "items.proto";
import "settings.proto";
import "updates.proto";

// Message color codes (values match reference implementation)
enum MessageColor {
  COLOR_DEFAULT = 0;  // Black
  // 1-3 reserved (also map to black in reference)
  COLOR_BLUE = 4;
  COLOR_GREEN = 5;
  COLOR_GOLD = 6;     // DarkGoldenrod
  COLOR_BROWN = 7;    // SaddleBrown
  COLOR_ORANGE = 8;   // DarkOrange
  COLOR_RED = 9;
  COLOR_GRAY = 10;
}

// Event streaming service
service EventService {
  // Single event stream for all real-time updates
  rpc StreamEvents(google.protobuf.Empty) returns (stream Event);

  // Clear messages by source
  rpc ClearMessages(ClearMessagesRequest) returns (google.protobuf.Empty);
}

// Request to clear messages for a specific source
message ClearMessagesRequest {
  string source = 1;  // "System" for system messages, or profile name
}

// Main event wrapper with timestamp and typed payload
message Event {
  google.protobuf.Timestamp timestamp = 1;

  oneof event {
    // Snapshots
    ProfilesSnapshot profiles_snapshot = 10;
    KeyListsSnapshot key_lists_snapshot = 11;
    SchedulesSnapshot schedules_snapshot = 12;

    // Profile events
    ProfileStatus profile_status = 23;

    // Console messages
    Message message = 60;

    // Settings & Updates
    Settings settings = 70;
    UpdateStatus update_status = 71;

    // Item entities
    EntitiesChanged entities_changed = 80;
  }
}

// Item entities changed event - signals UI to refresh entity list and search
message EntitiesChanged {}

// Snapshot messages
message ProfilesSnapshot {
  repeated ProfileWithStatus profiles = 1;
}

message ProfileWithStatus {
  Profile profile = 1;
  ProfileStatus status = 2;
}

message KeyListsSnapshot {
  repeated KeyListWithUsage key_lists = 1;
}

message KeyListWithUsage {
  KeyList key_list = 1;
  repeated KeyUsage usage = 2;
}

message KeyUsage {
  string key_name = 1;
  string profile_name = 2;  // Empty if not in use
}

message SchedulesSnapshot {
  repeated Schedule schedules = 1;
}


// Console message - source is "System" for system messages, or profile name for profile messages
message Message {
  string source = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
  MessageColor color = 4;
  optional Item item = 5;
}
